user create account pusher

--- a/manage1/i18n/es/LC_MESSAGES/manage1.po
+++ b/manage1/i18n/es/LC_MESSAGES/manage1.po
@@ -34,3 +34,10 @@ msgstr "at"
 msgid "edit"
 msgstr "edit"
 
+#: manage1/lib/helper
+msgid "create"
+msgstr "create"
+
+#: manage1/lib/helper
+msgid "account"
+msgstr "account"
