--- a/manage1/i18n/vi/LC_MESSAGES/manage1.po
+++ b/manage1/i18n/vi/LC_MESSAGES/manage1.po
@@ -34,3 +34,14 @@ msgstr "lúc"
 msgid "edit"
 msgstr "sửa"
 
+#: manage1/lib/helper
+msgid "edit"
+msgstr "sửa"
+
+#: manage1/lib/helper
+msgid "create"
+msgstr "tạo"
+
+#: manage1/lib/helper
+msgid "account"
+msgstr "tài khoản"
